--- a/.github/workflows/test-telegram.yml
+++ b/.github/workflows/test-telegram.yml
@@ -25,4 +25,4 @@ jobs:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          python test_bot.py
+          python src/scanner.py
