--- a/.github/workflows/test-telegram.yml
+++ b/.github/workflows/test-telegram.yml
@@ -24,4 +24,5 @@ jobs:
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: python ./src/scanner.py
+        run: |
+          python scanner.py
