--- a/.github/workflows/test-telegram.yml
+++ b/.github/workflows/test-telegram.yml
@@ -1,7 +1,9 @@
 name: Test Telegram Bot
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:    # still allow manual runs from the Actions tab
+  schedule:             # automatic runs
+    - cron: "*/5 * * * *"
 
 jobs:
   test_send:
