--- a/config.yaml
+++ b/config.yaml
@@ -82,14 +82,16 @@ scanner:
     - 15m
 
   atr:
+  atr:
     sl_multiplier: 1.8
-    tp_multipliers: [2.0, 3.0, 4.5, 6.0]   # TP1→TP4 automatically generated
+    tp_multipliers: [3.0, 5.0, 8.0, 12.0]
 
   volume:
     spike_multiplier: 2.2
 
   scoring:
     threshold: 50   # current mode: aggressive 5m
+
 
 
 
